gaz/04-allow-calculator-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-calculator-public-ingress
  namespace: gaz
spec:
  podSelector:
    matchLabels:
      app: calculatorgaz
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 3000
