gaz/06-allow-calculator-db-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-calculator-db-egress
  namespace: gaz
spec:
  podSelector:
    matchLabels:
      app: calculatorgaz
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgress
    ports:
    - protocol: TCP
      port: 5432
