gaz/08-allow-ddos-agent-egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-ddos-agent-egress
  namespace: gaz
spec:
  endpointSelector:
    matchLabels:
      app: calculatorgaz
  egress:
  - toEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
